<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Orange"
    tools:context=".view.first.FirstScreenActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ctn_suitmedia"
        android:src="@drawable/suitmedia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        style="@style/Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-10dp"
        app:cardCornerRadius="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_hello"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desk_first"
                android:textSize="16sp"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <com.capstone.project.testsuitmedia.view.customview.EditText
                android:id="@+id/nameEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameInput"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/textinputlayout"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.capstone.project.testsuitmedia.view.customview.EditText>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <com.capstone.project.testsuitmedia.view.customview.EditText
                android:id="@+id/palindromeEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_palindrome">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/palindromeInput"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/textinputlayout"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.capstone.project.testsuitmedia.view.customview.EditText>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/checkButton"
                style="@style/CustomButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:text="@string/str_check"
                app:cornerRadius="32dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nextButton"
                style="@style/CustomButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:text="@string/str_next"
                app:cornerRadius="32dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>