<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.second.SecondScreenActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialBarDetail"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:navigationIconTint="@color/black"
            app:title="@string/str_second_screen"
            app:titleTextAppearance="@style/TextTitle.AppBar"
            app:titleTextColor="@color/black" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/str_welcome"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarDetail" />

    <TextView
        android:id="@+id/userNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeText"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:text="@string/str_username"
        android:textSize="28sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeText" />

    <TextView
        android:id="@+id/selectedUserNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userNameText"
        android:layout_margin="16dp"
        android:text="@string/str_selected_user_name"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/chooseUserButton"
        style="@style/CustomButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="Choose a User"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="40dp"
        app:cornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>